Dark mode fix

--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ strong {
 }
 
 @media (prefers-color-scheme: dark) {
-  .featured-image {
+  h1 {
     color: white;
   }
 }
